# agentic-ai

./: .gitignore  Langraph_dynamic_node_creation.ipynb  Mermaid_Diagram.ipynb  README.md  config.py  test_main.ipynb
agent-from-scratch-claude-WEB/: http_server.py  message_queue.py  pyproject.toml
agent-from-scratch-claude-WEB/agents/: base_agent.py
agent-from-scratch-claude-WEB/auth/: authentication.py
agent-from-scratch-claude-WEB/core/: types.py
agent-from-scratch-claude-WEB/graph/: task_graph.py
agent-from-scratch-claude-WEB/memory/: memory_manager.py
agent-from-scratch-claude-WEB/orchestrator/: orchestrator.py
agent-from-scratch-claude-WEB/storage/: sqlite_storage.py
agent-from-scratch-claude/agentic_framework/: __init__.py
agent-from-scratch-claude/agentic_framework/core/: __init__.py  agent.py  graph.py  message.py
agent-from-scratch-claude/agentic_framework/orchestrator/: __init__.py  executor.py  orchestrator.py  scheduler.py
agent-orchastration-scratch/: .~lock.main.docx#  Literal_pydantic.txt  PROMPTS_GPT.py  READING.py  REPOS.py  asyncio.ipynb  asyncio_test.py  claude_langchain_langgraph_tutorial_1.py  concurency_asyncio.ipynb  debug_1.py  deep-agents_datacamp.py  langgraph_planner_v1.py  langraph_planner_v2.py  main.docx  main.odt  main.py  main_2.py  main_3.py  main_4.py  memory.py  tool_decorator.py
agent-orchastration-scratch/chatgpt_demo/: docker-compose.yml
agent-orchastration-scratch/chatgpt_demo/mcp_tool/: server.py
agent-orchastration-scratch/mcp/example1/: agent.py  (+1 more)
agent-prod/: README.md
providers/: amadeus_provider.py
(+6 files in other folders)
